--- a/.github/workflows/main_bodybuilderrpg.yml
+++ b/.github/workflows/main_bodybuilderrpg.yml
@@ -1,65 +1,68 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - BodybuilderRPG
+name: Build and Deploy Full Stack App to Azure
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: windows-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Set up .NET Core
+      # Install Node.js for React build
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      # Build React frontend
+      - name: Install frontend dependencies
+        working-directory: BodybuilderRPG/BodybuilderRPG.Client
+        run: npm install
+
+      - name: Build frontend
+        working-directory: BodybuilderRPG/BodybuilderRPG.Client
+        run: npm run build
+
+      # Copy React build output into ASP.NET wwwroot
+      - name: Copy frontend to backend
+        run: |
+          rm -rf BodybuilderRPG/BodybuilderRPG.Server/wwwroot/*
+          cp -r BodybuilderRPG/BodybuilderRPG.Client/build/* BodybuilderRPG/BodybuilderRPG.Server/wwwroot/
+
+      # Setup .NET
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: '8.0.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      # Restore, build, publish backend
+      - name: Restore dependencies
+        run: dotnet restore BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Build backend
+        run: dotnet build BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj --configuration Release --no-restore
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+      - name: Publish backend
+        run: dotnet publish BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj -c Release -o ./publish --no-build
 
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
-      
-      - name: Login to Azure
+      # Deploy to Azure (with OIDC)
+      - name: Azure Login
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1412F413BAEF4D2EA01D0891FDCE1B53 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D17A8D6BF63D4C8A9F202475CA5D278C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_98948D1B5F524ADFA24135D3A580C950 }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+      - name: Deploy to Azure WebApp
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'BodybuilderRPG'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: YOUR_APP_NAME   # <-- replace with your App Service name
+          package: ./publish
