Update to .csproj file for conflicting assets with same target path error

--- a/BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj
+++ b/BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj
@@ -16,10 +16,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference Include="..\bodybuilderrpg.client\bodybuilderrpg.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
-  </ItemGroup>
+  </ItemGroup> -->
 
 </Project>
