--- a/.github/workflows/main_bodybuilderrpg.yml
+++ b/.github/workflows/main_bodybuilderrpg.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Copy front end to wwwroot
         run: |
-          mkdir -p ./wwwroot
-          cp -r BodybuilderRPG/bodybuilderrpg.client/dist/* ./wwwroot/
+          mkdir -p ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot
+          cp -r BodybuilderRPG/bodybuilderrpg.client/dist/* ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot/
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -82,6 +82,7 @@ jobs:
           slot-name: 'Production'
           package: .
           
+
 
 
 
