--- a/.github/workflows/main_bodybuilderrpg.yml
+++ b/.github/workflows/main_bodybuilderrpg.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Copy front end to wwwroot
         run: |
           mkdir -p ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot
-          cp -r BodybuilderRPG/bodybuilderrpg.client/dist/* ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot/
+          cp -r BodybuilderRPG/bodybuilderrpg.client/dist/. ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot/
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -82,6 +82,7 @@ jobs:
           slot-name: 'Production'
           package: .
           
+
 
 
 
