--- a/BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj
+++ b/BodybuilderRPG/BodybuilderRPG.Server/BodybuilderRPG.Server.csproj
@@ -22,4 +22,8 @@
     </ProjectReference>
   </ItemGroup> -->
 
+  <ItemGroup>
+    <Content Include="wwwroot\**\*.*" CopyToPublishDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
