--- a/.github/workflows/main_bodybuilderrpg.yml
+++ b/.github/workflows/main_bodybuilderrpg.yml
@@ -36,8 +36,7 @@ jobs:
       - name: Copy front end to wwwroot
         run: |
           mkdir -p ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot
-          cp -r BodybuilderRPG/bodybuilderrpg.client/dist/. ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot/
-          cp -r BodybuilderRPG/bodybuilderrpg.client/dist/game/* BodybuilderRPG/BodybuilderRPG.Server/wwwroot/game/
+          cp -r ./BodybuilderRPG/bodybuilderrpg.client/dist/ ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot/
 
       - name: List wwwroot contents
         run: ls -R ./BodybuilderRPG/BodybuilderRPG.Server/wwwroot
@@ -86,6 +85,7 @@ jobs:
           slot-name: 'Production'
           package: .
           
+
 
 
 
